tests/baselines/reference/objectRestAssignment.errors.txt
objectRestAssignment.ts(6,46): error TS2454: Variable 'complex' is used before being assigned.
objectRestAssignment.ts(12,63): error TS2454: Variable 'overEmit' is used before being assigned.
objectRestAssignment.ts(13,60): error TS2454: Variable 'overEmit' is used before being assigned.


==== objectRestAssignment.ts (3 errors) ====
    let ka: any;
    let nested: { ki };
    let other: number;
    let rest: { };
    let complex: { x: { ka, ki }, y: number };
    ({x: { ka, ...nested }, y: other, ...rest} = complex);
                                                 ~~~~~~~
!!! error TS2454: Variable 'complex' is used before being assigned.
    
    // should be:
    let overEmit: { a: { ka: string, x: string }[], b: { z: string, ki: string, ku: string }, ke: string, ko: string };
    
    // var _g = overEmit.a, [_h, ...y] = _g, nested2 = __rest(_h, []), _j = overEmit.b, { z } = _j, c = __rest(_j, ["z"]), rest2 = __rest(overEmit, ["a", "b"]);
    var { a: [{ ...nested2 }, ...y], b: { z, ...c }, ...rest2 } = overEmit;
                                                                  ~~~~~~~~
!!! error TS2454: Variable 'overEmit' is used before being assigned.
    ({ a: [{ ...nested2 }, ...y], b: { z, ...c }, ...rest2 } = overEmit);
                                                               ~~~~~~~~
!!! error TS2454: Variable 'overEmit' is used before being assigned.
    